<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="welcome_to_shoe_store_inventory">Welcome to Shoe Store Inventory</string>
    <string name="message_text">Hey there!! Come check our shoe inventory</string>
    <string name="instructions">Instructions</string>
    <string name="list_of_instructions">1) Click on the button below to view our shoe inventory.
    2) Scroll through our inventory. Clicking on an item will take you to the details screen. </string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="proceed_to_shoe_store_inventory">Proceed to Shoe Store</string>
    <string name="loginInfo">Welcome to the shoe store app. Please login to continue or simply create an account.</string>
    <string name="logout">Logout</string>
</resources>
